Refactorig classes in model, refactoring interfaces in repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,25 @@
+# Nombre de la aplicacion
 spring.application.name=sigepat
 
+# Importacion de configuracion desde un archivo
 spring.config.import=optional:file:.env[.properties]
+
+# Perfi activo (se usara el valor la variable MYENV)
 spring.profiles.active=${MYENV}
+
+# COnfiguracion de la base de datos
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# Inicializacion del esquema SQL simepre activada
 spring.sql.init.mode=always
+
+# Puerto del servidor
 server.port=8080
+
+
+# Configuraci\u00f3n de escaneo
+spring.jpa.packages-to-scan=com.dirac.sigepat.model
+
+
