--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,11 @@ server.port=8080
 spring.jpa.packages-to-scan=com.dirac.sigepat.model
 
 
+# Configuraci\u00f3n de Google OAuth
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${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}
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+
+
