fix: Update files related to authentication with OAUTH API and API test with Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,11 @@ spring.security.oauth2.client.registration.google.client-secret=${GOCSPX-5EsB9Dr
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
 spring.security.oauth2.client.registration.google.scope=email,profile
 
+springdoc.swagger-ui.server-url=http://localhost:8080
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+
+
 
 
